projects/vb6parse/snapshots/syntax/library/statements/mid/mid_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/string_manipulation/mid.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: MidStatement
      children:
        - kind: MidKeyword
          text: Mid
        - kind: Whitespace
          text: "  "
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: Whitespace
                  text: "  "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: myString
            - kind: Whitespace
              text: "  "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "  "
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "3"
            - kind: Whitespace
              text: "  "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "  "
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "2"
            - kind: Whitespace
              text: "  "
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: "  "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "  "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"XX\""
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
